<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/primary"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/parametre"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:background="@color/primary"
            android:scaleType="centerInside"
            android:src="@drawable/ic_parametre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/info"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:background="@color/primary"
            android:scaleType="centerInside"
            android:src="@drawable/ic_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/EMTWebSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/secondary"
        android:background="@color/primary"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/Developedby"
        app:layout_constraintTop_toBottomOf="@+id/EMTWebSite"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/TdB"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_pilote" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30sp">

            <TextView
                android:id="@+id/textepilote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pilot"
                android:textColor="@color/secondary"
                android:background="@color/primary"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="22sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/staff"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_equipe" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/texteequipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/staff"
                android:textColor="@color/secondary"
                android:background="@color/primary"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="22sp"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/Developedby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developedby"
        android:textColor="#A7A7A7"
        android:background="@color/primary"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/Version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/Version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textColor="@color/tertiary"
        android:background="@color/primary"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

